PreloadHashKey for as="style" shouldn't use the whole referrer info as part of the key.
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox79 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
Details
Attachments
(1 file, 1 obsolete file)
We probably should remove the referrer policy check altogether in bug 1642591, but the preload code still uses the whole referrer as the key, which the css loader stopped doing in bug 1599160.
So this should be an uncontroversial simplification.
| Assignee | ||
Comment 1•5 years ago
|
||
We probably should remove the referrer policy check altogether in
bug 1642591, but the preload code still uses the whole referrer as the
key for css, which the css loader stopped doing in bug 1599160.
So this should be an uncontroversial simplification.
| Assignee | ||
Comment 3•5 years ago
|
||
This test fails already on master if you change this line:
by:
Ci.nsIReferrerInfo.EMPTY
Because the previous part of the test populates the image cache. The
test wants to check that the channel for the image load is properly
flagged as private and thus that the http cache is partitioned
appropriately, thus clearing the image caches seems sane.
While at it, also fix it so that we send a valid image instead of base64
text, though that change is not technically needed so feel free to ask
me to remove it.
Comment 4•5 years ago
|
||
| bugherder | ||
Comment 5•5 years ago
|
||
Comment on attachment 9157010 [details]
Bug 1646019 - Fix image/test/unit/test_private_channel.js. r=tnikkel
Revision D79848 was moved to bug 1642591. Setting attachment 9157010 [details] to obsolete.
Description
•