Bug 1646019 - Make PreloadHashKey don't check referrer for equality for style. r=mayhemer

We probably should remove the referrer policy check altogether in
bug 1642591, but the preload code still uses the whole referrer as the
key for css, which the css loader stopped doing in bug 1599160.

So this should be an uncontroversial simplification.

Differential Revision: https://phabricator.services.mozilla.com/D79810